# plasmagun

./: CMakeLists.txt  Makefile.win  README.md
res/: main_window.ui
src/: error.h  main.cpp  oscope_conn.cpp  oscope_conn.h  stdafx.h  test_main.cpp
src/gui/: main_window.cpp  main_window.h  oscope_conn.cpp  oscope_conn.h  window.cpp  window.h
src/infiniium/: connection.cpp  connection.h  infiniium_connection.cpp  infiniium_connection.h  infiniium_proto.cpp  infiniium_proto.h  net.cpp  net.h  socket.cpp
src/net/: connection.cpp  connection.h  socket.h
